FIX: Readability of word cloud

--- a/style/style.css
+++ b/style/style.css
@@ -13,8 +13,10 @@ body{
 }
 
 #window {
-    max-height: 100%;
-    max-width: 100%;
+  
+    min-height:200%;
+   
+    min-width: 110%;
     margin: 0;
     padding: 0; 
 }
